# lab05-nota-tech

__MACOSX/: ._lab05-nota-tech-main
codigo/: README.md
codigo/aplicativo/: pubspec.yaml
codigo/aplicativo/ios/Runner/: Info.plist
codigo/aplicativo/lib/: app_widget.dart  home_page_widget.dart  lista_notas.dart  login_page_widget.dart  main.dart  pagamentos.dart
codigo/aplicativo/lib/controllers/: nfse.dart  payment.dart
codigo/aplicativo/lib/models/: nfse.dart  payment.dart
codigo/aplicativo/lib/repositories/: nfse.dart  nfse_interface.dart  payment.dart  payment_interface.dart
codigo/aplicativo/linux/: my_application.cc
codigo/aplicativo/macos/Runner.xcodeproj/: project.pbxproj
codigo/aplicativo/test/: widget_test.dart
codigo/aplicativo/web/: manifest.json
codigo/aplicativo/windows/runner/: main.cpp
codigo/company_service/prisma/: schema.prisma
codigo/company_service/src/: server.ts
codigo/company_service/src/modules/empresa/criaEmpresa/: CriaEmpresaUseCase.ts
codigo/company_service/src/modules/empresa/deletaEmpresa/: DeletaEmpresaController.ts  DeletaEmpresaUseCase.ts
codigo/frontend/: .env
codigo/frontend/public/: index.html
codigo/frontend/src/: App.tsx
codigo/frontend/src/modules/@shared/components/: arrow-style.tsx  icon-button-animate.tsx  iconify.tsx  label.tsx
codigo/frontend/src/modules/@shared/guards/: guest-guard.tsx
codigo/frontend/src/modules/@shared/hooks/: use-value-history.ts
codigo/frontend/src/modules/@shared/providers/: form-provider.tsx  palette-theme-provider.tsx
codigo/frontend/src/modules/dashboard/: dashboard-module.tsx  dashboard-paths.ts
codigo/frontend/src/modules/dashboard/components/: index.tsx
codigo/frontend/src/modules/dashboard/services/: nfse-service.ts
codigo/nfse_service/: .gitignore  Dockerfile  package-lock.json  package.json
codigo/nfse_service/src/interfaces/: Payment.ts
codigo/nfse_service/src/queues/: nfse.ts
codigo/nfse_service/src/repositories/: FirestoreNfseRepository.ts
codigo/nfse_service/src/routes/nfses/: create.ts  index.ts
codigo/nfse_service/src/schemas/: list.json
codigo/nfse_service/src/types/: service.d.ts
codigo/payment_service/: .env.example  docker-compose.yml  package.json
codigo/payment_service/src/: swagger.ts
codigo/payment_service/src/apis/: index.ts
codigo/payment_service/src/database/: mongo.ts
codigo/payment_service/src/queues/: index.ts
codigo/payment_service/src/repositories/: MongoPaymentRepository.ts
codigo/payment_service/src/routes/payments/: edit.ts  gerarNfse.ts  getById.ts  list.ts
codigo/payment_service/src/schemas/: create.ts  list.ts
codigo/payment_service/src/types/: company.ts  createPaymentPayload.ts  payment.ts  repository.ts
codigo/plugins/PixJS/: CMakeLists.txt  package.json
codigo/plugins/PixJS/methods/: Generate.cpp  Generate.h  Validate.h
codigo/plugins/PixJS/pix/: CMakeLists.txt  Helper.h  Request.cpp  Request.h
codigo/plugins/PixJS/pix/include/: Pix.h
codigo/plugins/PixJS/pix/libs/QrToPng/src/: CMakeLists.txt  QrToPng.h
lab05-nota-tech-main/: README.md
lab05-nota-tech-main/codigo/aplicativo/: README.md  analysis_options.yaml  pubspec.yaml
lab05-nota-tech-main/codigo/aplicativo/android/app/: build.gradle
lab05-nota-tech-main/codigo/aplicativo/ios/Runner.xcodeproj/: project.pbxproj
lab05-nota-tech-main/codigo/aplicativo/lib/: home_page.dart  lista_notas_widget.dart  login_page.dart  main.dart  pagamentos.dart  register_page.dart  sqflite_handler.dart
lab05-nota-tech-main/codigo/aplicativo/lib/controllers/: nfse.dart  payment.dart
lab05-nota-tech-main/codigo/aplicativo/lib/models/: nfse.dart  payment.dart  user.dart
lab05-nota-tech-main/codigo/aplicativo/lib/repositories/: nfse.dart  nfse_interface.dart  payment.dart  payment_interface.dart
lab05-nota-tech-main/codigo/aplicativo/linux/: CMakeLists.txt
lab05-nota-tech-main/codigo/aplicativo/macos/Runner.xcodeproj/: project.pbxproj
lab05-nota-tech-main/codigo/aplicativo/macos/Runner/Configs/: AppInfo.xcconfig
lab05-nota-tech-main/codigo/aplicativo/web/: index.html
lab05-nota-tech-main/codigo/aplicativo/windows/: CMakeLists.txt
lab05-nota-tech-main/codigo/aplicativo/windows/runner/: Runner.rc
lab05-nota-tech-main/codigo/company_service/: package.json
lab05-nota-tech-main/codigo/company_service/src/: routes.ts
lab05-nota-tech-main/codigo/company_service/src/database/: enums.ts
lab05-nota-tech-main/codigo/company_service/src/errors/: AppError.ts
lab05-nota-tech-main/codigo/frontend/: package.json  tsconfig.json
lab05-nota-tech-main/codigo/frontend/src/: config.ts  index.tsx
lab05-nota-tech-main/codigo/frontend/src/redux/: rootReducer.ts  store.ts
lab05-nota-tech-main/codigo/frontend/src/routes/: index.tsx
lab05-nota-tech-main/codigo/nfse_service/: README.md  docker-compose.yml
lab05-nota-tech-main/codigo/nfse_service/src/: app.ts  server.ts  swagger.ts
lab05-nota-tech-main/codigo/nfse_service/src/types/: nfse.ts
lab05-nota-tech-main/codigo/payment_service/: Dockerfile  package-lock.json
lab05-nota-tech-main/codigo/payment_service/src/: app.ts
lab05-nota-tech-main/codigo/payment_service/src/apis/: companyService.ts
lab05-nota-tech-main/codigo/payment_service/src/queues/: nfse.ts
lab05-nota-tech-main/codigo/payment_service/src/repositories/: index.ts
lab05-nota-tech-main/codigo/payment_service/src/routes/: index.ts
lab05-nota-tech-main/codigo/payment_service/src/schemas/: id.ts  update.ts
lab05-nota-tech-main/codigo/payment_service/src/types/: commons.ts  service.d.ts
lab05-nota-tech-main/codigo/plugins/PixJS/: main.cpp  package-lock.json  tsconfig.json
lab05-nota-tech-main/codigo/plugins/PixJS/lib/: index.js  index.js.map
lab05-nota-tech-main/codigo/plugins/PixJS/methods/: Validate.cpp
lab05-nota-tech-main/codigo/plugins/PixJS/pix/: Helper.cpp
lab05-nota-tech-main/codigo/plugins/PixJS/pix/curlpp/: CMakeLists.txt
lab05-nota-tech-main/codigo/plugins/PixJS/src/: index.js  index.ts
(+99 files in other folders)
